# osm_data_extractor

./: .gitignore  README.md  extract.ipynb  pyproject.toml
