[project]
name = "osm-data-extractor"
version = "0.1.0"
authors = [
    {name = "Emanuele Panizio"}
]
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "osmnx (>=2.0.1,<3.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]
license = "MIT"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
